dev/myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: dev
  labels:
    app: myapp
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
     containers:
      - name: myapp
        image: paulbouwer/hello-kubernetes:1.9
        ports:
          - containerPort: 8080
