dev/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: dev
spec:
  selector:
    app: myapp
  ports:
    - name: myapp
      protocol: TCP
      port: 8080
      targetPort: 8080
